# tuya-mqttbroker

./: .gitignore  CMakeLists.txt  app_default.config  使用说明.md
TuyaOpen/: .gitignore  AGENTS.md  CMakeLists.txt  export.bat  export.ps1  export.sh  pyproject.toml  tos.py
TuyaOpen/apps/tuya_cloud/window_broker/: .gitignore  CMakeLists.txt  README.md
TuyaOpen/apps/tuya_cloud/window_broker/esp_components/espressif__mosquitto/: .component_hash  CHECKSUMS.json  idf_component.yml
TuyaOpen/apps/tuya_cloud/window_broker/esp_components/espressif__mosquitto/port/: broker.c  callbacks.c  net__esp_tls.c
TuyaOpen/apps/tuya_cloud/window_broker/src/: app_led.c  app_protocol_bridge.c  app_protocol_bridge.h  app_tuya_bridge.c  app_tuya_bridge.h  reset_netcfg.c  reset_netcfg.h  tuya_config.h  tuya_config_secrets.h.example  tuya_main.c
TuyaOpen/apps/tuya_cloud/window_broker/test/: simulation_test.py
docs/: Doxyfile  hardware_test_plan.md
docs/adr/: ADR-001-tuyaopen-vs-matter.md  ADR-002-broker-authentication.md  ADR-003-exponential-backoff-circuit-breaker.md  ADR-004-hash-lookup-optimization.md
flash/: MatterBridgeFlashTool.spec  README.md  build_exe.bat  flash_tool.py  requirements.txt
src/: app_button.c  app_button.h  app_led.c  app_led.h  app_protocol_bridge.c  app_protocol_bridge.h  app_tuya_bridge.c  reset_netcfg.c  tuya_main.c
test/: simulation_test.py
